<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FBFFFC">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/nitrogenn"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nitrogen"
                android:layout_marginStart="8dp"
                android:inputType="numberDecimal"
                android:id="@+id/Nitrogen"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/phosphoruss"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phosphorus"
                android:layout_marginStart="8dp"
                android:inputType="numberDecimal"
                android:id="@+id/Phosphorus"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/potassiumm"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/potassium"
                android:id="@+id/Potassium"
                android:inputType="numberDecimal"
                android:layout_marginStart="8dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/temperature_in_c"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/temperature"
                android:layout_marginStart="8dp"
                android:id="@+id/Temperature"
                android:inputType="numberDecimal"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/humidity_in"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/humidity"
                android:layout_marginStart="8dp"
                android:inputType="numberDecimal"
                android:id="@+id/Humidity"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/ph"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ph"
                android:layout_marginStart="8dp"
                android:inputType="numberDecimal"
                android:id="@+id/Ph"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/rainfall_in_mm"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rainfall"
                android:id="@+id/Rainfall"
                android:inputType="numberDecimal"
                android:layout_marginStart="8dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:id="@+id/predict"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:background="@drawable/border_animation"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="30dp"
                android:text="@string/recommend"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text=""
                android:textColor="#F3F7F3"
                android:textAlignment="center"
                android:textStyle="bold"
                android:id="@+id/result"
                android:padding="10dp"
                android:visibility="gone"
                android:background="@drawable/border_animation"
                 />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
